--- a/css-build/imports/globals.less
+++ b/css-build/imports/globals.less
@@ -20,12 +20,6 @@ body {
 	.ti();
 }
 
-
-// Force the height of the home page on handhelds
-.home .site-main {
-	min-height: 1200px;
-}
-
 // Move the main h1/logo to the left
 .site-title {
 	text-align: left;
@@ -184,7 +178,7 @@ ul.nav-menu .focus > ul,
 // Set some elements in Bootstrap's "row" class to be 300px and centered
 .row-inner-element {
 	margin: 0 auto;
-	width: 300px;
+	max-width: 277px;
 }
 
 // Make the font size of the home page's "artist" copy bigger
