--- a/css-build/imports/max-width-767.less
+++ b/css-build/imports/max-width-767.less
@@ -129,6 +129,11 @@
     margin: 0 auto;
   }
 
+  // Set a home page min-height forcing the footer to the bottom
+  .home .site-main {
+    min-height: 1249px;
+  }
+
   // Pad the bottom of the intro copy on the home page
   .home-page-info {
     padding: 0 0 30px;
