--- a/css-build/imports/min-width-1200.less
+++ b/css-build/imports/min-width-1200.less
@@ -11,11 +11,16 @@
     top: 30px;
     left: 8px;
   }
-      
+
    // Limit the header's width to 900px & pad it on the sides
   .site-header {
     max-width: 900px;
     padding: 0 40px;
+  }
+
+  // Set a home page min-height forcing the footer to the bottom
+  .home .site-main {
+    min-height: 800px;
   }
 
   // Style the footer on desktops
