--- a/themes/parlor/style.css
+++ b/themes/parlor/style.css
@@ -1432,7 +1432,6 @@ a,a:focus,a:hover{color:#696767}
 .site,.site-main,body,html{height:100%;min-height:100%}
 .site{overflow-x:hidden}
 body{font-family:Quicksand,sans-serif}
-.home .site-main{min-height:1200px}
 .site-header{margin:0 auto}
 .navbar{margin-bottom:0}
 .site-footer{height:20px;background-color:#ababab}
@@ -1451,7 +1450,7 @@ div.nav-menu>ul,ul.nav-menu{margin:0}
 .nav-menu ul ul a:focus,.nav-menu ul ul a:hover,ul.nav-menu ul a:focus,ul.nav-menu ul a:hover{background-color:#db572f}
 .nav-menu .focus>ul,.nav-menu ul li:hover>ul,ul.nav-menu .focus>ul,ul.nav-menu li:hover>ul{clip:inherit;overflow:inherit;height:inherit;width:inherit}
 .homepage-row{margin:0 auto 70px;max-width:700px}
-.row-inner-element{margin:0 auto;width:300px}
+.row-inner-element{margin:0 auto;max-width:277px}
 .art-exhibits-header{font-size:40px}
 .facebook-link-text{position:absolute!important;clip:rect(1px 1px 1px 1px);clip:rect(1px,1px,1px,1px)}
 @media (min-width:768px){.site{margin:0 auto}
@@ -1469,6 +1468,7 @@ div.nav-menu>ul,ul.nav-menu{margin:0}
 @media (min-width:1200px){.page{width:auto;margin:0 auto}
 .navbar{float:right;top:30px;left:8px}
 .site-header{max-width:900px;padding:0 40px}
+.home .site-main{min-height:800px}
 .site-footer{position:relative;height:30px;background:#ababab;color:#363030}}
 @media (max-width:767px){.home-link{margin-left:30px}
 .site-header{text-align:center}
@@ -1490,6 +1490,8 @@ div.nav-menu>ul,ul.nav-menu{display:none}
 .toggled-on .nav-menu>li a:hover,.toggled-on .nav-menu>ul a:hover{background-color:#db572f;color:#fff}
 .toggled-on .nav-menu>li a:focus,.toggled-on .nav-menu>ul a:focus{background-color:#220e10;color:#fff}
 .entry-content{min-width:320px;margin:0 auto}
+.home .site-main{min-height:1249px}
 .home-page-info{padding:0 0 30px}
 .site-footer{height:42px;min-width:320px;width:100%}}
 @media (min-width:768px)and (max-width:991px){.col-md-6{width:300px;display:inline-block;vertical-align:top}}
+.frs-slideshow-container{margin:0 auto!important;max-width:277px!important}
