--- a/css-build/imports/globals.less
+++ b/css-build/imports/globals.less
@@ -163,11 +163,12 @@ ul.nav-menu .focus > ul,
 	width: inherit;
 }
 
+
 /*
-* =====================================================================
-* End main navigation styling
-* =====================================================================
-*/
+ * =====================================================================
+ * End main navigation styling
+ * =====================================================================
+ */
 
 // Space out the two rows on the home page
 .homepage-row {
@@ -190,3 +191,34 @@ ul.nav-menu .focus > ul,
 .facebook-link-text {
 	.hide-element();
 }
+
+
+/*
+ * =====================================================================
+ * Start content navigation styling
+ * =====================================================================
+ */
+
+a {
+  color: rgba(37, 184, 192, 1);
+  text-decoration: underline;
+
+  &:hover {
+    color: rgba(37, 184, 192, 1);
+    text-decoration: none;
+  }
+
+  &:visited	 {
+    color: rgba(37, 184, 192, 1);
+    text-decoration: none;
+  }
+
+}
+
+/*
+ * =====================================================================
+ * End content navigation styling
+ * =====================================================================
+ */
+
+
