--- a/css-build/imports/bootstrap-override.less
+++ b/css-build/imports/bootstrap-override.less
@@ -21,3 +21,12 @@ a:focus,a:hover{
   font-size: 18px;
   margin: 0 auto;
 }
+
+// Override Bootstrap's ".col-md-6"
+// Override left & right padding
+// Set a max-width
+.col-md-6 {
+  padding-right: 0;
+  padding-left: 0;
+  max-width: 320px;
+}
