--- a/css-build/imports/globals.less
+++ b/css-build/imports/globals.less
@@ -163,7 +163,6 @@ ul.nav-menu .focus > ul,
 	width: inherit;
 }
 
-
 /*
  * =====================================================================
  * End main navigation styling
@@ -175,6 +174,7 @@ ul.nav-menu .focus > ul,
 	margin: 0 auto 70px;
   max-width: 700px;
 }
+
 
 // Set some elements in Bootstrap's "row" class to be 300px and centered
 .row-inner-element {
@@ -215,10 +215,24 @@ a {
 
 }
 
-/*
- * =====================================================================
- * End content navigation styling
- * =====================================================================
- */
+
+	
+
+
+.menu-item a {
+  color: rgba(105, 103, 103, 1);
+  text-decoration: none;
+
+  &:hover {
+    color: rgba(105, 103, 103, 1);
+    text-decoration: none;
+  }
+
+  &:visited	 {
+    color: rgba(105, 103, 103, 1);
+    text-decoration: none;
+  }
+
+}
 
 
