--- a/css-build/style.css
+++ b/css-build/style.css
@@ -62,6 +62,11 @@ a:hover {
   font-size: 18px;
   margin: 0 auto;
 }
+.col-md-6 {
+  padding-right: 0;
+  padding-left: 0;
+  max-width: 320px;
+}
 .says,
 .screen-reader-text,
 .site-description {
@@ -69,6 +74,21 @@ a:hover {
   clip: rect(1px 1px 1px 1px);
   /* IE6, IE7 */
   clip: rect(1px, 1px, 1px, 1px);
+}
+.entry-title {
+  max-width: 330px;
+  border-bottom: 1px solid #4c4b4b;
+  text-transform: uppercase;
+}
+.home .entry-title {
+  max-width: none;
+  border-bottom-width: medium;
+  border-bottom-style: none;
+  border-bottom-color: currentColor;
+  text-transform: none;
+}
+.entry-content {
+  font-size: 18px;
 }
 @media only screen and (min-width: 320px) and (max-width: 767px) {
   /* Hand-held screen, non-retina */
@@ -323,11 +343,18 @@ a:visited {
   color: #25b8c0;
   text-decoration: none;
 }
-/*
- * =====================================================================
- * End content navigation styling
- * =====================================================================
- */
+.menu-item a {
+  color: #696767;
+  text-decoration: none;
+}
+.menu-item a:hover {
+  color: #696767;
+  text-decoration: none;
+}
+.menu-item a:visited {
+  color: #696767;
+  text-decoration: none;
+}
 @media (min-width: 768px) {
   .site {
     margin: 0 auto;
