--- a/css-build/imports/globals.less
+++ b/css-build/imports/globals.less
@@ -1,7 +1,6 @@
 // Make sure the entire page stretches to the botton
 html, body, .site, .site-main {
-	height: 100%;
-	min-height:100%;
+	min-height: 900px;
 }
 
 .site {
