--- a/css-build/imports/min-width-768-max-width-991.less
+++ b/css-build/imports/min-width-768-max-width-991.less
@@ -1,9 +1,13 @@
 @media (min-width: 768px) and (max-width: 991px) {
 
-	.col-md-6 {
-		width: 300px;
-		display: inline-block;
-		vertical-align: top;
-	}
+  .col-md-6 {
+    width: 300px;
+	display: inline-block;
+	vertical-align: top;
+  }
+
+  .home-link {
+  	margin-left: 16px;
+  }
 
 }
