--- a/css-build/imports/mixins.less
+++ b/css-build/imports/mixins.less
@@ -41,6 +41,11 @@
   text-indent: -999px;
 }
 
+// Off-screen text-indent
+.center {
+  margin: 0 auto;
+}
+
 // z-index mixins
 // 5 or less should be fine, but plugin code may mean more are required
 // WordPress can also get crazy with z-indexes (e.g. "z-index: 9999")
