--- a/css-build/imports/min-width-1200.less
+++ b/css-build/imports/min-width-1200.less
@@ -12,10 +12,9 @@
     left: 8px;
   }
 
-   // Limit the header's width to 900px & pad it on the sides
+   // Limit the header's width to 900px
   .site-header {
     max-width: 900px;
-    padding: 0 40px;
   }
 
   // Set a home page min-height forcing the footer to the bottom
