--- a/css-build/imports/globals.less
+++ b/css-build/imports/globals.less
@@ -170,9 +170,18 @@ ul.nav-menu .focus > ul,
 
 // Space out the two rows on the home page
 .homepage-row {
-	margin: 0 auto 70px;
+	.bootstrap-row-margins();
   max-width: 700px;
 }
+
+
+
+// Space out the two rows on the home page
+.content-row {
+	.bootstrap-row-margins();
+}
+
+
 
 
 // Set some elements in Bootstrap's "row" class to be 300px and centered
