--- a/css-build/style.css
+++ b/css-build/style.css
@@ -48,6 +48,9 @@
 /*
  * HELPER CLASSES END
  */
+.bootstrap-row-margins {
+  margin: 0 auto 70px;
+}
 /*
  * BOOTSTRAP OVERRIDES
  * ====================================================================
@@ -315,6 +318,9 @@ ul.nav-menu .focus > ul,
   margin: 0 auto 70px;
   max-width: 700px;
 }
+.content-row {
+  margin: 0 auto 70px;
+}
 .row-inner-element {
   margin: 0 auto;
   max-width: 277px;
@@ -397,7 +403,7 @@ a:visited {
   .navbar {
     max-width: 600px;
     display: inline-block;
-    left: 47px;
+    left: 28px;
   }
   .home-page-info {
     padding-top: 30px;
