--- a/themes/parlor/style.css
+++ b/themes/parlor/style.css
@@ -1475,7 +1475,8 @@ a:hover,a:visited{color:#25b8c0;text-decoration:none}
 .hours,.sitemap-link{float:right}
 .navbar{max-width:600px;left:28px}
 .home-page-info{padding-top:30px}
-.row-inner-element{margin:0}}
+.row-inner-element{margin:0}
+.page-copy-column{width:400px;margin-right:100px}}
 @media (min-width:992px)and (max-width:1199px){.site-header{max-width:818px}
 .col-md-6{width:300px;display:inline-block;vertical-align:top}
 .home-link{margin-left:16px}}
@@ -1507,7 +1508,8 @@ div.nav-menu>ul,ul.nav-menu{display:none}
 .home .site-main{min-height:1249px}
 .home-page-info{padding:0 0 30px}
 .site-footer{height:42px;min-width:320px;width:100%}
-.col-md-6{margin:0 auto}}
+.col-md-6{margin:0 auto}
+.page-copy-column{width:300px;margin:0 auto}}
 @media (min-width:768px)and (max-width:991px){.col-md-6{width:300px;display:inline-block;vertical-align:top}
 .home-link{margin-left:16px}}
 .frs-slideshow-container{margin:0 auto!important;max-width:277px!important}
