--- a/themes/parlor/style.css
+++ b/themes/parlor/style.css
@@ -1342,7 +1342,6 @@ button.close{-webkit-appearance:none;padding:0;cursor:pointer;background:0 0;bor
 .carousel-indicators .active{width:12px;height:12px;margin:0;background-color:#fff}
 .carousel-caption{position:absolute;right:15%;bottom:20px;left:15%;z-index:10;padding-top:20px;padding-bottom:20px;color:#fff;text-align:center}
 .carousel-caption .btn,.text-hide{text-shadow:none}
-.menu-item,.site-title{text-align:left}
 @media screen and (min-width:768px){.carousel-control .glyphicon-chevron-left,.carousel-control .glyphicon-chevron-right,.carousel-control .icon-next,.carousel-control .icon-prev{width:30px;height:30px;margin-top:-15px;font-size:30px}
 .carousel-control .glyphicon-chevron-left,.carousel-control .icon-prev{margin-left:-15px}
 .carousel-control .glyphicon-chevron-right,.carousel-control .icon-next{margin-right:-15px}
@@ -1422,8 +1421,11 @@ a,a:focus,a:hover{color:#696767}
 .row{margin:0 auto}
 .col-md-6{padding-right:0;padding-left:0;max-width:320px}
 .says,.screen-reader-text,.site-description{position:absolute!important;clip:rect(1px 1px 1px 1px);clip:rect(1px,1px,1px,1px)}
-.entry-title{max-width:330px;border-bottom:1px solid #4c4b4b}
-.home .entry-title{max-width:none;border-bottom-width:medium;border-bottom-style:none;border-bottom-color:currentColor;text-transform:none}
+.entry-title{border-bottom:1px solid #4c4b4b}
+.home .entry-title{max-width:none;border-bottom:0;text-transform:none}
+@media (max-width:767px){.entry-title{text-align:center;text-decoration:underline;border-bottom:0;margin-bottom:30px}}
+.menu-item,.site-title{text-align:left}
+@media (min-width:768px){.entry-title{max-width:330px;border-bottom:1px solid #4c4b4b}}
 .site,body{max-width:100%}
 @media only screen and (min-width:320px)and (max-width:767px){.site-title{background:url(/wp/wp-content/themes/parlor/images/logo.png)no-repeat;background-size:200px 41px;width:200px;height:41px;text-indent:-999px}}
 @media only screen and (-webkit-min-device-pixel-ratio:2)and (min-width:320px)and (max-width:767px),only screen and (min-device-pixel-ratio:2)and (min-width:320px)and (max-width:767px),only screen and (min-resolution:192dpi)and (min-width:320px)and (max-width:767px),only screen and (min-resolution:2dppx)and (min-width:320px)and (max-width:767px){.site-title{background:url(/wp/wp-content/themes/parlor/images/logo@2x.png)no-repeat;background-size:200px 41px;width:200px;height:41px;text-indent:-999px}}
@@ -1466,6 +1468,7 @@ a{color:#25b8c0;text-decoration:underline}
 a:hover,a:visited{color:#25b8c0;text-decoration:none}
 .menu-item a,.menu-item a:hover,.menu-item a:visited{color:#696767;text-decoration:none}
 .product-links-header{margin-top:50px}
+.contact-page-test{margin-bottom:50px}
 @media (min-width:768px){.site{margin:0 auto}
 .menu-toggle{display:none}
 .contact-information-element,.navbar{display:inline-block}
@@ -1492,6 +1495,7 @@ a:hover,a:visited{color:#25b8c0;text-decoration:none}
 div.nav-menu>ul,ul.nav-menu{display:none}
 .main-navigation{position:absolute;z-index:5}
 .navbar{top:-51px;left:28px}
+.menu-toggle{font-weight:bolder;cursor:pointer}
 .menu-main-container{background:#4f4b4b;color:#fff;box-shadow:10px 9px 5px -5px rgba(0,0,0,.37)}
 .menu-item{font-size:22px;margin:6px 0}
 .menu-item a,.menu-item a:visited{color:#fff}
@@ -1504,7 +1508,7 @@ div.nav-menu>ul,ul.nav-menu{display:none}
 .toggled-on .nav-menu .children a,.toggled-on .nav-menu li:hover>a{background-color:transparent;color:#fff}
 .toggled-on .nav-menu>li a:hover,.toggled-on .nav-menu>ul a:hover{background-color:#db572f;color:#fff}
 .toggled-on .nav-menu>li a:focus,.toggled-on .nav-menu>ul a:focus{background-color:#220e10;color:#fff}
-.entry-content{min-width:300px;margin:0 auto}
+.entry-content{max-width:767px;margin:0 auto}
 .home .site-main{min-height:1249px}
 .home-page-info{padding:0 0 30px}
 .site-footer{height:42px;min-width:320px;width:100%}
@@ -1516,3 +1520,6 @@ div.nav-menu>ul,ul.nav-menu{display:none}
 .frs-photo-column{margin-left:0}
 @media (max-width:767px){.frs-photo-column{margin:0 auto}}
 @media (min-width:768px){.frs-photo-column{margin-left:60px}}
+.wpcf7-submit{border-radius:10px;color:#fff;background:#545454;font-weight:700;padding:8px;border:none}
+@media (max-width:767px){.wpcf7-form-control{max-width:300px}
+.wpcf7{margin-top:40px}}
