--- a/css-build/imports/globals.less
+++ b/css-build/imports/globals.less
@@ -4,7 +4,7 @@ html, body, .site, .site-main {
 }
 
 .site {
-	max-width: 100%;
+	width: 100%;
 	overflow-x: hidden;
 }
 
@@ -36,6 +36,7 @@ body {
 // Style the footer
 .site-footer {
 	height: 20px;
+	width: 100%;
 	background-color: rgba(171, 171, 171, 1);
 }
 
@@ -247,12 +248,32 @@ a {
 
 /*
  * =====================================================================
+ * Services Page stuff
+ * =====================================================================
+ */
+
+ // List of services
+.service-list {
+  padding-left:20px;
+  margin-top: 50px;
+}
+
+// A single service list item
+.service-list-item {
+	margin-bottom:20px;
+}
+
+
+/*
+ * =====================================================================
  * Product Page stuff
  * =====================================================================
  */
 .product-links-header {
 	margin-top:50px;
 }
+
+
 
 /*
  * =====================================================================
