--- a/css-build/imports/max-width-767.less
+++ b/css-build/imports/max-width-767.less
@@ -165,4 +165,24 @@
     margin: 0 auto;
   }
 
+
+/*
+ * =====================================================================
+ * STYLE THE TEAM PAGE
+ * =====================================================================
+ */
+
+  // center the single team headers
+  .team-copy-column h3 {
+    text-align: center;
+  }
+  
+  // center the single team images
+  .team-image-container {
+    margin:0 auto;
+    width: 200px;
+  }
+
+
+
 }
