--- a/css-build/imports/bootstrap-override.less
+++ b/css-build/imports/bootstrap-override.less
@@ -22,11 +22,11 @@ a:focus,a:hover{
   margin: 0 auto;
 }
 
-// Override Bootstrap's ".col-md-6"
-// Override left & right padding
-// Set a max-width
-.col-md-6 {
+// Override left & right that's always on  Bootstrap's ".col-md-6" & ".container"
+.col-md-3, .col-md-6, .col-md-9 .container, {
   padding-right: 0;
   padding-left: 0;
-  max-width: 320px;
 }
+
+
+
