--- a/css-build/imports/wordpress-override.less
+++ b/css-build/imports/wordpress-override.less
@@ -24,6 +24,26 @@
   font-size: 18px;
 }
 
+
+
+/*
+ * =====================================================================
+ * STYLE THE TEAM PAGE
+ * =====================================================================
+ */
+
+.team-row {
+  margin-bottom:60px;
+}
+
+ // Globally add a border to the team images
+.page-id-24 .alignnone {
+  border: 1px solid rgba(0, 0, 0, 1);
+}
+
+
+
+
 @media (max-width: 767px) {
 
   .entry-title {
