--- a/css-build/style.css
+++ b/css-build/style.css
@@ -68,10 +68,11 @@ a:hover {
   font-size: 18px;
   margin: 0 auto;
 }
-.col-md-6 {
+.col-md-3,
+.col-md-6,
+.col-md-9 .container {
   padding-right: 0;
   padding-left: 0;
-  max-width: 320px;
 }
 .says,
 .screen-reader-text,
@@ -92,6 +93,17 @@ a:hover {
 }
 .entry-content {
   font-size: 18px;
+}
+/*
+ * =====================================================================
+ * STYLE THE TEAM PAGE
+ * =====================================================================
+ */
+.team-row {
+  margin-bottom: 60px;
+}
+.page-id-24 .alignnone {
+  border: 1px solid #000000;
 }
 @media (max-width: 767px) {
   .entry-title {
@@ -203,7 +215,7 @@ body,
   min-height: 900px;
 }
 .site {
-  max-width: 100%;
+  width: 100%;
   overflow-x: hidden;
 }
 body {
@@ -224,6 +236,7 @@ body {
 }
 .site-footer {
   height: 20px;
+  width: 100%;
   background-color: #ababab;
 }
 .site-footer-inner {
@@ -376,6 +389,18 @@ a:visited {
 }
 /*
  * =====================================================================
+ * Services Page stuff
+ * =====================================================================
+ */
+.service-list {
+  padding-left: 20px;
+  margin-top: 50px;
+}
+.service-list-item {
+  margin-bottom: 20px;
+}
+/*
+ * =====================================================================
  * Product Page stuff
  * =====================================================================
  */
@@ -429,10 +454,6 @@ a:visited {
   }
   .row-inner-element {
     margin: 0;
-  }
-  .page-copy-column {
-    width: 400px;
-    margin-right: 100px;
   }
 }
 @media (min-width: 992px) and (max-width: 1199px) {
@@ -591,6 +612,18 @@ a:visited {
     width: 300px;
     margin: 0 auto;
   }
+  /*
+ * =====================================================================
+ * STYLE THE TEAM PAGE
+ * =====================================================================
+ */
+  .team-copy-column h3 {
+    text-align: center;
+  }
+  .team-image-container {
+    margin: 0 auto;
+    width: 200px;
+  }
 }
 @media (min-width: 768px) and (max-width: 991px) {
   .col-md-6 {
@@ -622,11 +655,6 @@ a:visited {
 @media (max-width: 767px) {
   .frs-photo-column {
     margin: 0 auto;
-  }
-}
-@media (min-width: 768px) {
-  .frs-photo-column {
-    margin-left: 60px;
   }
 }
 /*
