--- a/themes/parlor/style.css
+++ b/themes/parlor/style.css
@@ -4,7 +4,7 @@
  Description:  Twenty Thirteen Child Theme
  Author:       Parlor Hair Studio
  Author URI:   http://parlorhairstudio.com
-Template: twentythirteen
+ Template:     twentythirteen
  Version:      1.0.0
  License:      GNU General Public License v2 or later
  License URI:  http://www.gnu.org/licenses/gpl-2.0.html
@@ -1419,14 +1419,15 @@ td.visible-print,th.visible-print{display:table-cell!important}}
 .bootstrap-row-margins{margin:0 auto 70px}
 a,a:focus,a:hover{color:#696767}
 .row{margin:0 auto}
-.col-md-6{padding-right:0;padding-left:0;max-width:320px}
+.col-md-3,.col-md-6,.col-md-9 .container{padding-right:0;padding-left:0}
 .says,.screen-reader-text,.site-description{position:absolute!important;clip:rect(1px 1px 1px 1px);clip:rect(1px,1px,1px,1px)}
 .entry-title{border-bottom:1px solid #4c4b4b}
 .home .entry-title{max-width:none;border-bottom:0;text-transform:none}
+.team-row{margin-bottom:60px}
+.page-id-24 .alignnone{border:1px solid #000}
 @media (max-width:767px){.entry-title{text-align:center;text-decoration:underline;border-bottom:0;margin-bottom:30px}}
 .menu-item,.site-title{text-align:left}
 @media (min-width:768px){.entry-title{max-width:330px;border-bottom:1px solid #4c4b4b}}
-.site,body{max-width:100%}
 @media only screen and (min-width:320px)and (max-width:767px){.site-title{background:url(/wp/wp-content/themes/parlor/images/logo.png)no-repeat;background-size:200px 41px;width:200px;height:41px;text-indent:-999px}}
 @media only screen and (-webkit-min-device-pixel-ratio:2)and (min-width:320px)and (max-width:767px),only screen and (min-device-pixel-ratio:2)and (min-width:320px)and (max-width:767px),only screen and (min-resolution:192dpi)and (min-width:320px)and (max-width:767px),only screen and (min-resolution:2dppx)and (min-width:320px)and (max-width:767px){.site-title{background:url(/wp/wp-content/themes/parlor/images/logo@2x.png)no-repeat;background-size:200px 41px;width:200px;height:41px;text-indent:-999px}}
 @media only screen and (min-width:768px){.site-title{background:url(/wp/wp-content/themes/parlor/images/logo.png)no-repeat;background-size:200px 41px;width:200px;height:41px;text-indent:-999px}
@@ -1440,11 +1441,11 @@ a,a:focus,a:hover{color:#696767}
 @media only screen and (-webkit-min-device-pixel-ratio:2)and (min-width:1300px),only screen and (min-device-pixel-ratio:2)and (min-width:1300px),only screen and (min-resolution:192dpi)and (min-width:1300px),only screen and (min-resolution:2dppx)and (min-width:1300px){.site-title{background:url(/wp/wp-content/themes/parlor/images/logo@2x.png)no-repeat;background-size:200px 41px;width:200px;height:41px;text-indent:-999px}
 .menu-item::before{content:url(/wp/wp-content/themes/parlor/images/nav-bullet@2x.png);margin-right:5px}}
 .site,.site-main,body,html{min-height:900px}
-.site{overflow-x:hidden}
-body{font-family:Quicksand,sans-serif}
+.site{width:100%;overflow-x:hidden}
+body{max-width:100%;font-family:Quicksand,sans-serif}
 .site-header{margin:0 auto}
 .navbar{margin-bottom:0}
-.site-footer{height:20px;background-color:#ababab}
+.site-footer{height:20px;width:100%;background-color:#ababab}
 .site-footer-inner{margin:0 20px}
 .menu-item{list-style-type:none;margin-right:7px}
 .main-navigation-header{position:absolute!important;clip:rect(1px 1px 1px 1px);clip:rect(1px,1px,1px,1px)}
@@ -1462,12 +1463,14 @@ div.nav-menu>ul,ul.nav-menu{margin:0}
 .nav-menu .focus>ul,.nav-menu ul li:hover>ul,ul.nav-menu .focus>ul,ul.nav-menu li:hover>ul{clip:inherit;overflow:inherit;height:inherit;width:inherit}
 .homepage-row{max-width:700px}
 .row-inner-element{margin:0 auto;max-width:277px}
+.product-links-header,.service-list{margin-top:50px}
 .art-exhibits-header{font-size:40px}
 .facebook-link-text{position:absolute!important;clip:rect(1px 1px 1px 1px);clip:rect(1px,1px,1px,1px)}
 a{color:#25b8c0;text-decoration:underline}
 a:hover,a:visited{color:#25b8c0;text-decoration:none}
 .menu-item a,.menu-item a:hover,.menu-item a:visited{color:#696767;text-decoration:none}
-.product-links-header{margin-top:50px}
+.service-list{padding-left:20px}
+.service-list-item{margin-bottom:20px}
 .contact-page-test{margin-bottom:50px}
 @media (min-width:768px){.site{margin:0 auto}
 .menu-toggle{display:none}
@@ -1478,8 +1481,7 @@ a:hover,a:visited{color:#25b8c0;text-decoration:none}
 .hours,.sitemap-link{float:right}
 .navbar{max-width:600px;left:28px}
 .home-page-info{padding-top:30px}
-.row-inner-element{margin:0}
-.page-copy-column{width:400px;margin-right:100px}}
+.row-inner-element{margin:0}}
 @media (min-width:992px)and (max-width:1199px){.site-header{max-width:818px}
 .col-md-6{width:300px;display:inline-block;vertical-align:top}
 .home-link{margin-left:16px}}
@@ -1488,8 +1490,8 @@ a:hover,a:visited{color:#25b8c0;text-decoration:none}
 .site-header{max-width:900px}
 .home .site-main{min-height:800px}
 .site-footer{position:relative;height:30px;background:#ababab;color:#363030}}
-@media (max-width:767px){.home-link{margin-left:30px}
-.site-header{text-align:center}
+@media (max-width:767px){.site-header,.team-copy-column h3{text-align:center}
+.home-link{margin-left:30px}
 .contact-information{position:absolute!important;clip:rect(1px 1px 1px 1px);clip:rect(1px,1px,1px,1px)}
 .hamburger-menu{display:block;width:25px;height:4px;margin:5px 0;background:#000}
 div.nav-menu>ul,ul.nav-menu{display:none}
@@ -1513,13 +1515,13 @@ div.nav-menu>ul,ul.nav-menu{display:none}
 .home-page-info{padding:0 0 30px}
 .site-footer{height:42px;min-width:320px;width:100%}
 .col-md-6{margin:0 auto}
-.page-copy-column{width:300px;margin:0 auto}}
+.page-copy-column{width:300px;margin:0 auto}
+.team-image-container{margin:0 auto;width:200px}}
 @media (min-width:768px)and (max-width:991px){.col-md-6{width:300px;display:inline-block;vertical-align:top}
 .home-link{margin-left:16px}}
 .frs-slideshow-container{margin:0 auto!important;max-width:277px!important}
 .frs-photo-column{margin-left:0}
-@media (max-width:767px){.frs-photo-column{margin:0 auto}}
-@media (min-width:768px){.frs-photo-column{margin-left:60px}}
 .wpcf7-submit{border-radius:10px;color:#fff;background:#545454;font-weight:700;padding:8px;border:none}
-@media (max-width:767px){.wpcf7-form-control{max-width:300px}
+@media (max-width:767px){.frs-photo-column{margin:0 auto}
+.wpcf7-form-control{max-width:300px}
 .wpcf7{margin-top:40px}}
